# G4_SIM_Template

./: .gitignore  README.md
DIGI/lib/: Makefile
DIGI/lib/include/: BarPos.hh  EventReader.hh
DIGI/lib/src/: EventReader.cc
DIGI/sim_digitalize/: Makefile  digi.cfg
DIGI/sim_digitalize/include/: Calib.hh  Config.hh  Constants.hh  Digi.hh  OptionsManager.hh  OutDataFile.hh  OutDataFile_A.hh  OutDataFile_B.hh
DIGI/sim_digitalize/src/: Calib.cc  Config.cc  Digi.cc  OptionsManager.cc  OutDataFile.cc  OutDataFile_A.cc  OutDataFile_B.cc  main.cc
G4SIM/: CMakeLists.txt  G4SIM.cc  g4cmake.sh
G4SIM/include/: ConfigMessenger.hh  Constants.hh  GlobalConfig.hh  MyActionInitialization.hh  MyDetectorConstruction.hh  MyEventAction.hh  MyHit.hh  MyPhysicsList.hh  MyPhysicsList.hh.NoModular  MyPrimaryGeneratorAction.hh  MyRun.hh  MyRunAction.hh  MySensitiveDetector.hh  MySteppingAction.hh  OptionsManager.hh  ParticleDataFileR.hh
G4SIM/macros/: config.mac  gps.mac  init.mac  run.mac  vis.mac
G4SIM/src/: ConfigMessenger.cc  GlobalConfig.cc  MyActionInitialization.cc  MyDetectorConstruction.cc  MyEventAction.cc  MyHit.cc  MyPhysicsList.cc  MyPhysicsList.cc.NoModular  MyPrimaryGeneratorAction.cc  MyRun.cc  MyRunAction.cc  MySensitiveDetector.cc  MySteppingAction.cc  OptionsManager.cc  ParticleDataFileR.cc
